plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.websoso'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    //spring boot starter
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //spring actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    //spring data jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    //spring boot starter for testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // spring boot bean validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // jwt
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    //QueryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Lettuce for Java Redis client
    implementation 'io.lettuce:lettuce-core:6.3.2.RELEASE'

    // spring data redis
    implementation 'org.springframework.data:spring-data-redis:3.3.2'

    //Json
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    //Apple Login
    implementation 'com.nimbusds:nimbus-jose-jwt:3.10'

    // FCM
    implementation 'com.google.firebase:firebase-admin:9.4.3'

    // S3 Mapping Library
    implementation 'com.github.Team-WSS:WSS-Server-S3:0.0.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
